# Inzynieria-Oprogramowania-grupa2

./: CMakeLists.txt  dokumentacja kodu.txt  mainwindow.cpp  mainwindow.h  opis prac.txt
baza/: bazaprzychodnia(1).sql  bazaprzychodnia(11).sql  bazaprzychodnia(2).sql  bazaprzychodnia(4).sql  bazaprzychodnia.sql
baza/bazaprzychodnia/: administrator.frm  administrator.ibd  dyrektor.frm  dyrektor.ibd  lek.frm  lek.ibd  lekarz.frm  lekarz.ibd  pacjent.frm  pacjent.ibd  pracownik.frm  pracownik.ibd  pracowniklogin.frm  pracowniklogin.ibd  recepta.frm  recepta.ibd  receptalek.frm  receptalek.ibd  rejestracja.frm  rejestracja.ibd  sprzedawca.frm  sprzedawca.ibd  sprzedaz.frm  sprzedaz.ibd  sprzedazlek.frm  sprzedazlek.ibd  wizyta.frm  wizyta.ibd
medimaxzut/: CMakeLists.txt  baza.h  lists.h  login.h  main.cpp  session.h
medimaxzut/login/: login.cpp  login.h  loginWindow.h  loginui.h
medimaxzut/mailList/: listmail.cpp  listmail.h  listmail.ui  listmailitem.cpp  listmailitem.h  listmailitem.ui  mailext.cpp  mailext.h  mailext.ui  mailitem.cpp  mailitem.h  mailitem.ui  ui_listmail.h
medimaxzut/mailList/temp/: maildetails.cpp  maildetails.h  maildetails.ui  mailitem.ui  ui_mailitem.h
medimaxzut/mainWindow/: buttonname.h  mainui.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  navibutton.cpp  navibutton.h  navibutton.ui  ui_mainwindow.h  ui_navibutton.h
medimaxzut/message/: newmessage.cpp  newmessage.h  newmessage.ui  ui_newmessage.h
medimaxzut/newPatient/: newpatient.cpp  newpatient.h  newpatient.ui  newpatientdoctorlistitem.cpp  newpatientdoctorlistitem.h  newpatientdoctorlistitem.ui  ui_newpatient.h  ui_newpatientdoctorlistitem.h
medimaxzut/prescriptionAdd/: prescriptionitem.cpp  prescriptionitem.h  prescriptionitem.ui  prescriptionwindow.cpp  prescriptionwindow.h  prescriptionwindow.ui  ui_prescriptionwindow.h
medimaxzut/profile/: profil.cpp  profil.h  profil.ui  profiladmin.cpp  profiladmin.h  profiladmin.ui  ui_profil.h  ui_profiladmin.h
medimaxzut/qtui/: dodawanie.cpp  dodawanie.h  dodawanie.ui  harmonogram.cpp  harmonogram.ui  mailitem.cpp  mailitem.h  mailitem.ui  main.cpp  main.h  main.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowharmonogram.ui  mainwindowlista.ui  mainwindowlogin.ui  mainwindowskrzynka.ui  mainwindowskrzynka.ui.autosave  recepta.cpp  recepta.h  recepta.ui  scheduleview.h  scheduleview.ui
medimaxzut/schedule/: schedulecell.cpp  schedulecell.h  schedulecell.ui  schedulecellempty.cpp  schedulecellempty.h  schedulecellempty.ui  scheduleview.cpp  scheduleview.h  scheduleview.ui  ui_schedulecell.h  ui_schedulecellempty.h  ui_scheduleview.h
medimaxzut/store/: prescriptionlist.cpp  prescriptionlist.h  prescriptionlist.ui  prescriptionlistitem.cpp  prescriptionlistitem.h  prescriptionlistitem.ui  storeitem.cpp  storeitem.h  storeitem.ui  storewindow.cpp  storewindow.h  storewindow.ui  ui_prescriptionlist.h  ui_prescriptionlistitem.h  ui_storeitem.h  ui_storewindow.h
medimaxzut/userList/: adminpanel.cpp  adminpanel.h  adminpanel.ui  listitem.cpp  listitem.h  listitem.ui  listuser.cpp  listuser.h  listuser.ui  profil.ui  ui_adminpanel.h  ui_listuser.h
qtui/: mainwindow.ui  mainwindowharmonogram.ui  mainwindowlista.ui  mainwindowlogin.ui  mainwindowrecepta.ui  mainwindowskrzynka.ui  mainwindowwizyty.ui
tmp/: baza.h  listuser.cpp
